@@ -4,4 +4,6 @@
   <span tal:content="context" />
   <span tal:content="request" />
   <span tal:content="options/test" />
+  <span tal:condition="not:not:exists:options"
+  	tal:content="options/test/lower" />
 </div>
